# sandbox

./: .gitignore  LICENSE  README.md  my.repos
.github/workflows/: example.yaml
as2_node_parts/: CMakeLists.txt  package.xml
as2_node_parts/include/as2_node_parts/: i_np_tick.hpp  np_template_node.hpp
as2_node_parts/src/: tick.cpp
as2_node_parts/test/: CMakeLists.txt  as2_node_parts_main.cpp
as2_node_parts/test/case_1/: case_1_node.cpp  case_1_node.hpp  case_1_node_tester.cpp  case_1_node_tester.hpp  inner_state.hpp  input_state.hpp
no_api/: CMakeLists.txt  package.xml
no_api/include/no_api/: do_function.hpp  input_state.hpp
no_api/src/: do_function.cpp  main.cpp
no_api/src/details/: no_api_node.cpp  no_api_node.hpp
prototype/: CMakeLists.txt  package.xml
prototype/include/prototype/logic_a/: logic_a.hpp
prototype/src/: main.cpp
prototype/src/logic_a/logic_a.cpp/: logic_a.cpp
